@@ -1,47 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record fc(List<fc.a> b) {
-   public static final fc a = new fc(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class fc implements ArgumentType<fc.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(xi.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(xi.c("argument.angle.invalid"));
 
-   public fc(we $$0) {
-      this($$0.a(we.a(ArrayList::new, 8), fc.a::new));
+   public static fc a() {
+      return new fc();
    }
 
-   public void a(we $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public static float a(CommandContext<ew> $$0, String $$1) {
+      return ((fc.a)$$0.getArgument($$1, fc.a.class)).a((ew)$$0.getSource());
    }
 
-   public static fc a(xz<?> $$0, fc.b $$1) {
-      List<fc.a> $$2 = $$0.a().stream().map($$1x -> {
-         xt $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new fc.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new fc($$2);
-   }
-
-   public List<fc.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, xt b) {
-      public a(we $$0) {
-         this($$0.d(16), xt.a($$0));
-      }
-
-      public void a(we $$0) {
-         $$0.a(this.a, 16);
-         xt.a($$0, this.b);
+   public fc.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = ha.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new fc.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
+         }
       }
    }
 
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      xt sign(String var1);
+   public Collection<String> getExamples() {
+      return c;
+   }
+
+   public static final class a {
+      private final float a;
+      private final boolean b;
+
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
+      }
+
+      public float a(ew $$0) {
+         return azk.h(this.b ? this.a + $$0.k().j : this.a);
+      }
    }
 }
