@@ -1,170 +1,109 @@
-import com.google.gson.JsonObject;
+import com.google.common.annotations.VisibleForTesting;
 import com.mojang.brigadier.StringReader;
 import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.mojang.brigadier.exceptions.Dynamic2CommandExceptionType;
-import com.mojang.brigadier.exceptions.Dynamic3CommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import com.mojang.datafixers.util.Either;
-import java.util.Arrays;
+import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import com.mojang.serialization.Codec;
 import java.util.Collection;
-import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.function.Predicate;
+import java.util.List;
+import javax.annotation.Nullable;
 
-public class fy<T> implements ArgumentType<fy.c<T>> {
-   private static final Collection<String> a = Arrays.asList("foo", "foo:bar", "012", "#skeletons", "#minecraft:skeletons");
-   private static final Dynamic2CommandExceptionType b = new Dynamic2CommandExceptionType(($$0, $$1) -> xh.b("argument.resource_tag.not_found", $$0, $$1));
-   private static final Dynamic3CommandExceptionType c = new Dynamic3CommandExceptionType(
-      ($$0, $$1, $$2) -> xh.b("argument.resource_tag.invalid_type", $$0, $$1, $$2)
-   );
-   private final jr<T> d;
-   final alg<? extends kc<T>> e;
+public class fy<T> implements ArgumentType<jq<T>> {
+   private static final Collection<String> b = List.of("foo", "foo:bar", "012", "{}", "true");
+   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> xi.b("argument.resource_or_id.failed_to_parse", $$0));
+   private static final SimpleCommandExceptionType c = new SimpleCommandExceptionType(xi.c("argument.resource_or_id.invalid"));
+   private final js.a d;
+   private final boolean e;
+   private final Codec<jq<T>> f;
 
-   public fy(er $$0, alg<? extends kc<T>> $$1) {
-      this.e = $$1;
-      this.d = $$0.d($$1);
+   protected fy(es $$0, alh<kd<T>> $$1, Codec<jq<T>> $$2) {
+      this.d = $$0;
+      this.e = $$0.a($$1).isPresent();
+      this.f = $$2;
    }
 
-   public static <T> fy<T> a(er $$0, alg<? extends kc<T>> $$1) {
-      return new fy<>($$0, $$1);
+   public static fy.c a(es $$0) {
+      return new fy.c($$0);
    }
 
-   public static <T> fy.c<T> a(CommandContext<ev> $$0, String $$1, alg<kc<T>> $$2) throws CommandSyntaxException {
-      fy.c<?> $$3 = (fy.c<?>)$$0.getArgument($$1, fy.c.class);
-      Optional<fy.c<T>> $$4 = $$3.a($$2);
-      return $$4.orElseThrow(() -> (CommandSyntaxException)$$3.a().map($$1xx -> {
-            alg<?> $$2x = $$1xx.h();
-            return fu.b.create($$2x.a(), $$2x.b(), $$2.a());
-         }, $$1xx -> {
-            axp<?> $$2x = $$1xx.h();
-            return c.create($$2x.b(), $$2x.a(), $$2.a());
-         }));
+   public static jq<euh> a(CommandContext<ew> $$0, String $$1) throws CommandSyntaxException {
+      return d($$0, $$1);
    }
 
-   public fy.c<T> a(StringReader $$0) throws CommandSyntaxException {
-      if ($$0.canRead() && $$0.peek() == '#') {
-         int $$1 = $$0.getCursor();
+   public static fy.a b(es $$0) {
+      return new fy.a($$0);
+   }
 
-         try {
-            $$0.skip();
-            alh $$2 = alh.a($$0);
-            axp<T> $$3 = axp.a(this.e, $$2);
-            jt.c<T> $$4 = this.d.a($$3).orElseThrow(() -> b.createWithContext($$0, $$2, this.e.a()));
-            return new fy.d<>($$4);
-         } catch (CommandSyntaxException var6) {
-            $$0.setCursor($$1);
-            throw var6;
-         }
+   public static jq<evq> b(CommandContext<ew> $$0, String $$1) {
+      return d($$0, $$1);
+   }
+
+   public static fy.b c(es $$0) {
+      return new fy.b($$0);
+   }
+
+   public static jq<exn> c(CommandContext<ew> $$0, String $$1) {
+      return d($$0, $$1);
+   }
+
+   private static <T> jq<T> d(CommandContext<ew> $$0, String $$1) {
+      return (jq<T>)$$0.getArgument($$1, jq.class);
+   }
+
+   @Nullable
+   public jq<T> a(StringReader $$0) throws CommandSyntaxException {
+      vh $$1 = b($$0);
+      if (!this.e) {
+         return null;
       } else {
-         alh $$6 = alh.a($$0);
-         alg<T> $$7 = alg.a(this.e, $$6);
-         jp.c<T> $$8 = this.d.a($$7).orElseThrow(() -> fu.a.createWithContext($$0, $$6, this.e.a()));
-         return new fy.b<>($$8);
+         alg<vh> $$2 = this.d.a(uy.a);
+         return (jq<T>)this.f.parse($$2, $$1).getOrThrow($$1x -> a.createWithContext($$0, $$1x));
       }
    }
 
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      fa.a(this.d.f().map(axp::b), $$1, "#");
-      return fa.a(this.d.c_().map(alg::a), $$1);
+   @VisibleForTesting
+   static vh b(StringReader $$0) throws CommandSyntaxException {
+      int $$1 = $$0.getCursor();
+      vh $$2 = new vi($$0).d();
+      if (c($$0)) {
+         return $$2;
+      } else {
+         $$0.setCursor($$1);
+         ali $$3 = ali.a($$0);
+         if (c($$0)) {
+            return vf.a($$3.toString());
+         } else {
+            $$0.setCursor($$1);
+            throw c.createWithContext($$0);
+         }
+      }
+   }
+
+   private static boolean c(StringReader $$0) {
+      return !$$0.canRead() || $$0.peek() == ' ';
    }
 
    public Collection<String> getExamples() {
-      return a;
+      return b;
    }
 
-   public static class a<T> implements ir<fy<T>, fy.a<T>.a> {
-      public void a(fy.a<T>.a $$0, we $$1) {
-         $$1.b($$0.b);
-      }
-
-      public fy.a<T>.a a(we $$0) {
-         return new fy.a.a($$0.r());
-      }
-
-      public void a(fy.a<T>.a $$0, JsonObject $$1) {
-         $$1.addProperty("registry", $$0.b.a().toString());
-      }
-
-      public fy.a<T>.a a(fy<T> $$0) {
-         return new fy.a.a($$0.e);
-      }
-
-      public final class a implements ir.a<fy<T>> {
-         final alg<? extends kc<T>> b;
-
-         a(final alg<? extends kc<T>> $$1) {
-            this.b = $$1;
-         }
-
-         public fy<T> a(er $$0) {
-            return new fy<>($$0, this.b);
-         }
-
-         @Override
-         public ir<fy<T>, ?> a() {
-            return a.this;
-         }
+   public static class a extends fy<evq> {
+      protected a(es $$0) {
+         super($$0, lz.be, evs.d);
       }
    }
 
-   static record b<T>(jp.c<T> a) implements fy.c<T> {
-      @Override
-      public Either<jp.c<T>, jt.c<T>> a() {
-         return Either.left(this.a);
-      }
-
-      @Override
-      public <E> Optional<fy.c<E>> a(alg<? extends kc<E>> $$0) {
-         return this.a.h().c($$0) ? Optional.of((fy.c<E>)this) : Optional.empty();
-      }
-
-      public boolean a(jp<T> $$0) {
-         return $$0.equals(this.a);
-      }
-
-      @Override
-      public String b() {
-         return this.a.h().a().toString();
-      }
-
-      public jp.c<T> c() {
-         return this.a;
+   public static class b extends fy<exn> {
+      protected b(es $$0) {
+         super($$0, lz.bf, exn.f);
       }
    }
 
-   public interface c<T> extends Predicate<jp<T>> {
-      Either<jp.c<T>, jt.c<T>> a();
-
-      <E> Optional<fy.c<E>> a(alg<? extends kc<E>> var1);
-
-      String b();
-   }
-
-   static record d<T>(jt.c<T> a) implements fy.c<T> {
-      @Override
-      public Either<jp.c<T>, jt.c<T>> a() {
-         return Either.right(this.a);
-      }
-
-      @Override
-      public <E> Optional<fy.c<E>> a(alg<? extends kc<E>> $$0) {
-         return this.a.h().c($$0) ? Optional.of((fy.c<E>)this) : Optional.empty();
-      }
-
-      public boolean a(jp<T> $$0) {
-         return this.a.a($$0);
-      }
-
-      @Override
-      public String b() {
-         return "#" + this.a.h().b();
-      }
-
-      public jt.c<T> c() {
-         return this.a;
+   public static class c extends fy<euh> {
+      protected c(es $$0) {
+         super($$0, lz.bd, euh.e);
       }
    }
 }
