@@ -1,19 +1,172 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class rx {
-   public static final alg<edr<?, ?>> a = ry.a("end_platform");
-   public static final alg<edr<?, ?>> b = ry.a("end_spike");
-   public static final alg<edr<?, ?>> c = ry.a("end_gateway_return");
-   public static final alg<edr<?, ?>> d = ry.a("end_gateway_delayed");
-   public static final alg<edr<?, ?>> e = ry.a("chorus_plant");
-   public static final alg<edr<?, ?>> f = ry.a("end_island");
+   public static final alh<edx<?, ?>> a = rz.a("monster_room");
+   public static final alh<edx<?, ?>> b = rz.a("fossil_coal");
+   public static final alh<edx<?, ?>> c = rz.a("fossil_diamonds");
+   public static final alh<edx<?, ?>> d = rz.a("dripstone_cluster");
+   public static final alh<edx<?, ?>> e = rz.a("large_dripstone");
+   public static final alh<edx<?, ?>> f = rz.a("pointed_dripstone");
+   public static final alh<edx<?, ?>> g = rz.a("underwater_magma");
+   public static final alh<edx<?, ?>> h = rz.a("glow_lichen");
+   public static final alh<edx<?, ?>> i = rz.a("rooted_azalea_tree");
+   public static final alh<edx<?, ?>> j = rz.a("cave_vine");
+   public static final alh<edx<?, ?>> k = rz.a("cave_vine_in_moss");
+   public static final alh<edx<?, ?>> l = rz.a("moss_vegetation");
+   public static final alh<edx<?, ?>> m = rz.a("moss_patch");
+   public static final alh<edx<?, ?>> n = rz.a("moss_patch_bonemeal");
+   public static final alh<edx<?, ?>> o = rz.a("dripleaf");
+   public static final alh<edx<?, ?>> p = rz.a("clay_with_dripleaves");
+   public static final alh<edx<?, ?>> q = rz.a("clay_pool_with_dripleaves");
+   public static final alh<edx<?, ?>> r = rz.a("lush_caves_clay");
+   public static final alh<edx<?, ?>> s = rz.a("moss_patch_ceiling");
+   public static final alh<edx<?, ?>> t = rz.a("spore_blossom");
+   public static final alh<edx<?, ?>> u = rz.a("amethyst_geode");
+   public static final alh<edx<?, ?>> v = rz.a("sculk_patch_deep_dark");
+   public static final alh<edx<?, ?>> w = rz.a("sculk_patch_ancient_city");
+   public static final alh<edx<?, ?>> x = rz.a("sculk_vein");
 
-   public static void a(qx<edr<?, ?>> $$0) {
-      ry.a($$0, a, eef.J);
-      ry.a($$0, b, eef.K, new ehd(false, ImmutableList.of(), null));
-      ry.a($$0, c, eef.M, egi.a(arm.a, true));
-      ry.a($$0, d, eef.M, egi.a());
-      ry.a($$0, e, eef.l);
-      ry.a($$0, f, eef.L);
+   private static jq<elb> a(jm $$0) {
+      return so.a(
+         eel.w,
+         new egg(
+            List.of(
+               egg.a(new brp(bql.<bri>a().a(bro.a(0, 4), 2).a(brf.a(0), 1).a()), eiq.a(dig.sE.m().b(dvz.R, $$0))),
+               egg.a(brf.a(1), eiq.a(dig.sD.m().b(dvz.R, $$0)))
+            ),
+            jm.b,
+            ecm.d,
+            true
+         )
+      );
+   }
+
+   private static jq<elb> a() {
+      return so.a(
+         eel.T,
+         new ehh(
+            new eja(
+               bql.<dvj>a().a(dig.sF.m().b(dpj.d, jm.f), 1).a(dig.sF.m().b(dpj.d, jm.e), 1).a(dig.sF.m().b(dpj.d, jm.c), 1).a(dig.sF.m().b(dpj.d, jm.d), 1)
+            )
+         )
+      );
+   }
+
+   public static void a(qy<edx<?, ?>> $$0) {
+      jr<edx<?, ?>> $$1 = $$0.a(lz.aJ);
+      jr<epx> $$2 = $$0.a(lz.aT);
+      rz.a($$0, a, eel.C);
+      List<ali> $$3 = List.of(
+         ali.b("fossil/spine_1"),
+         ali.b("fossil/spine_2"),
+         ali.b("fossil/spine_3"),
+         ali.b("fossil/spine_4"),
+         ali.b("fossil/skull_1"),
+         ali.b("fossil/skull_2"),
+         ali.b("fossil/skull_3"),
+         ali.b("fossil/skull_4")
+      );
+      List<ali> $$4 = List.of(
+         ali.b("fossil/spine_1_coal"),
+         ali.b("fossil/spine_2_coal"),
+         ali.b("fossil/spine_3_coal"),
+         ali.b("fossil/spine_4_coal"),
+         ali.b("fossil/skull_1_coal"),
+         ali.b("fossil/skull_2_coal"),
+         ali.b("fossil/skull_3_coal"),
+         ali.b("fossil/skull_4_coal")
+      );
+      jq<epx> $$5 = $$2.b(rg.D);
+      rz.a($$0, b, eel.p, new eeq($$3, $$4, $$5, $$2.b(rg.E), 4));
+      rz.a($$0, c, eel.p, new eeq($$3, $$4, $$5, $$2.b(rg.F), 4));
+      rz.a($$0, d, eel.ak, new egn(12, bro.a(3, 6), bro.a(2, 8), 1, 3, bro.a(2, 4), brn.b(0.3F, 0.7F), brc.a(0.1F, 0.3F, 0.1F, 0.9F), 0.1F, 3, 8));
+      rz.a($$0, e, eel.al, new egs(30, bro.a(3, 19), brn.b(0.4F, 2.0F), 0.33F, brn.b(0.3F, 0.9F), brn.b(0.4F, 1.0F), brn.b(0.0F, 0.3F), 4, 0.6F));
+      rz.a(
+         $$0,
+         f,
+         eel.ah,
+         new ehi(
+            ju.a(
+               so.a(eel.am, new egy(0.2F, 0.7F, 0.5F, 0.5F), eku.a(jm.a, ecm.c(), ecm.d, 12), elg.a(brf.a(1))),
+               so.a(eel.am, new egy(0.2F, 0.7F, 0.5F, 0.5F), eku.a(jm.b, ecm.c(), ecm.d, 12), elg.a(brf.a(-1)))
+            )
+         )
+      );
+      rz.a($$0, g, eel.B, new ehn(5, 1, 0.5F));
+      dnd $$6 = (dnd)dig.fg;
+      rz.a($$0, h, eel.A, new egu($$6, 20, false, true, true, 0.5F, ju.a(die::p, dig.b, dig.g, dig.e, dig.c, dig.su, dig.qN, dig.qz, dig.sJ)));
+      rz.a(
+         $$0,
+         i,
+         eel.z,
+         new ehf(
+            so.a($$1.b(se.w)),
+            3,
+            3,
+            axa.bx,
+            eiq.a(dig.sH),
+            20,
+            100,
+            3,
+            2,
+            eiq.a(dig.sG),
+            20,
+            2,
+            ecm.a(ecm.b(ecm.c(List.of(dig.a, dig.nc, dig.nb)), ecm.a(axa.cp)), ecm.a(jm.a.q(), axa.cj))
+         )
+      );
+      eja $$7 = new eja(bql.<dvj>a().a(dig.sw.m(), 4).a(dig.sw.m().b(dja.v_, Boolean.valueOf(true)), 1));
+      eiw $$8 = new eiw(new eja(bql.<dvj>a().a(dig.sv.m(), 4).a(dig.sv.m().b(dja.v_, Boolean.valueOf(true)), 1)), djb.e, bro.a(23, 25));
+      rz.a(
+         $$0,
+         j,
+         eel.w,
+         new egg(
+            List.of(egg.a(new brp(bql.<bri>a().a(bro.a(0, 19), 2).a(bro.a(0, 2), 3).a(bro.a(0, 6), 10).a()), $$7), egg.a(brf.a(1), $$8)), jm.a, ecm.c, true
+         )
+      );
+      rz.a($$0, k, eel.w, new egg(List.of(egg.a(new brp(bql.<bri>a().a(bro.a(0, 3), 5).a(bro.a(1, 7), 1).a()), $$7), egg.a(brf.a(1), $$8)), jm.a, ecm.c, true));
+      rz.a($$0, l, eel.T, new ehh(new eja(bql.<dvj>a().a(dig.sz.m(), 4).a(dig.sy.m(), 7).a(dig.sA.m(), 25).a(dig.bt.m(), 50).a(dig.iH.m(), 10))));
+      rz.a($$0, m, eel.x, new eho(axa.bv, eiq.a(dig.sC), so.a($$1.b(l)), ekr.b, brf.a(1), 0.0F, 5, 0.8F, bro.a(4, 7), 0.3F));
+      rz.a($$0, n, eel.x, new eho(axa.bv, eiq.a(dig.sC), so.a($$1.b(l)), ekr.b, brf.a(1), 0.0F, 5, 0.6F, bro.a(1, 2), 0.75F));
+      rz.a($$0, o, eel.ah, new ehi(ju.a(a(), a(jm.f), a(jm.e), a(jm.d), a(jm.c))));
+      rz.a($$0, p, eel.x, new eho(axa.bw, eiq.a(dig.dR), so.a($$1.b(o)), ekr.b, brf.a(3), 0.8F, 2, 0.05F, bro.a(4, 7), 0.7F));
+      rz.a($$0, q, eel.y, new eho(axa.bw, eiq.a(dig.dR), so.a($$1.b(o)), ekr.b, brf.a(3), 0.8F, 5, 0.1F, bro.a(4, 7), 0.7F));
+      rz.a($$0, r, eel.ai, new eha(so.a($$1.b(p)), so.a($$1.b(q))));
+      rz.a($$0, s, eel.x, new eho(axa.bv, eiq.a(dig.sC), so.a($$1.b(k)), ekr.a, bro.a(1, 2), 0.0F, 5, 0.08F, bro.a(4, 7), 0.3F));
+      rz.a($$0, t, eel.T, new ehh(eiq.a(dig.sx)));
+      rz.a(
+         $$0,
+         u,
+         eel.aj,
+         new egq(
+            new ebc(
+               eiq.a(dig.a),
+               eiq.a(dig.qt),
+               eiq.a(dig.qu),
+               eiq.a(dig.qN),
+               eiq.a(dig.te),
+               List.of(dig.qy.m(), dig.qx.m(), dig.qw.m(), dig.qv.m()),
+               axa.bP,
+               axa.bR
+            ),
+            new ebe(1.7, 2.2, 3.2, 4.2),
+            new ebd(0.95, 2.0, 2),
+            0.35,
+            0.083,
+            true,
+            bro.a(4, 6),
+            bro.a(3, 4),
+            bro.a(1, 2),
+            -16,
+            16,
+            0.05,
+            1
+         )
+      );
+      rz.a($$0, v, eel.an, new ehg(10, 32, 64, 0, 1, brf.a(0), 0.5F));
+      rz.a($$0, w, eel.an, new ehg(10, 32, 64, 0, 1, bro.a(1, 3), 0.5F));
+      dnd $$9 = (dnd)dig.qT;
+      rz.a($$0, x, eel.A, new egu($$9, 20, true, true, true, 1.0F, ju.a(die::p, dig.b, dig.g, dig.e, dig.c, dig.su, dig.qN, dig.qz, dig.sJ)));
    }
 }
